# mcp-firewall

./: .bazelignore  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  go.mod  policy.example.yaml
.github/: actionlint.yaml
.github/workflows/: bazel-rbe.yml
cmd/mcp-firewall/: BUILD.bazel  host_install.go  main.go  main_test.go  routes.go  toggle_helpers.go
internal/firewall/: BUILD.bazel  codec.go  discover.go  filter.go  http_proxy.go  http_server.go  inspect.go  logging.go  policy.go  policy_history.go  policy_templates.go  policy_test.go  proxy.go  sandbox.go  sse.go  toggle.go  types.go  ui_backend.go
internal/firewall/ui/: BUILD.bazel  embed.go
internal/firewall/ui/assets/: app.js  index.html  styles.css
internal/firewall/uiapi/: BUILD.bazel  handler.go
