load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mcp-firewall_lib",
    srcs = [
        "host_install.go",
        "main.go",
        "routes.go",
        "toggle_helpers.go",
    ],
    importpath = "mcp-firewall/cmd/mcp-firewall",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/firewall",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_binary(
    name = "mcp-firewall",
    embed = [":mcp-firewall_lib"],
    visibility = ["//visibility:public"],
)
